[No-Card] Shashank,Brindha | Fix word wrapping in custom question

--- a/src/app/components/user-additional-question/user-question-answer.component.css
+++ b/src/app/components/user-additional-question/user-question-answer.component.css
@@ -38,6 +38,7 @@
   padding-left: 15px;
   padding-right: 21px;
   opacity: 1;
+  word-break: break-word;
 }
 
 .question-content {
